# master-project-slider

./: README.md
SLIDER/src/gazebo_visual_plugin/: CMakeLists.txt  package.xml
SLIDER/src/gazebo_visual_plugin/src/: gazebo_plot_plugin.cc  gazebo_plot_plugin.h
SLIDER/src/rl-slider/: setup.py
SLIDER/src/rl-slider/rl_slider/: __init__.py  out100.json
SLIDER/src/rl-slider/rl_slider/envs/: __init__.py  restart_sim.py  slider_env.py
SLIDER/src/rl-slider/rl_slider/scripts/: deepq.py  liveplot.py  parameters.json  train.py
SLIDER/src/slider_controller/: CMakeLists.txt  package.xml
SLIDER/src/slider_controller/data/: SLIDER_ROTOGAIT_FOOT_pin.urdf
SLIDER/src/slider_controller/meshes/: Left_Foot.STL  Left_Foot_Pitch_Foot_Roll_Link.STL  Left_Pitch_Slide_Link.STL  Left_Roll_Pitch_Link.STL  Left_Slide_Foot_Pitch_Link.STL  Right_Foot.STL  Right_Foot_Pitch_Foot_Roll_Link.STL  Right_Pitch_Slide_Link.STL  Right_Roll_Pitch_Link.STL  Right_Slide_Foot_Pitch_Link.STL  base_link.STL
SLIDER/src/slider_controller/src/: LIPM.h  define.h  gen_trajectory.cc  gen_trajectory.h  osc.cc  osc.h  param.yaml  slider_controller.cc
SLIDER/src/slider_controller/src/MPC/: dynamics.cc  dynamics.h  motion_planner.cc
SLIDER/src/slider_controller/srv/: Controller_paramaters.srv  Weight_Ref.srv
SLIDER/src/slider_gazebo/: CMakeLists.txt  gazebo_env.py
SLIDER/src/slider_gazebo/config/: slider_control.yaml  slider_control_yearAgo.yaml
SLIDER/src/slider_gazebo/data/: SLIDER_jointTraj.xlsx  joint_trajectory_5body.csv  joint_trajectory_5body2.csv  joint_trajectory_5body_.csv  joint_trajectory_Harry.csv  joint_trajectory_Harry_best.csv  joint_trajectory_Harry_halfHip.csv  joint_trajectory_Harry_new.csv  joint_trajectory_MATLAB.csv  joint_trajectory_vel1.csv  joint_trajectory_vel1_MATLAB.csv  joint_trajectory_vel2.csv  joint_trajectory_vel3.csv  joint_trajectory_vel3_MATLAB.csv  joint_trajectory_vel4.csv
SLIDER/src/slider_gazebo/launch/: slider_controller.launch  slider_torque_control.launch
SLIDER/src/slider_gazebo/meshes/: EndCap.STL  HipRollBox.STL  LeftAnkle.STL  LeftSlidingBoxDefeature.STL  RightAnkle.STL  RightSlidingBoxDefeature.STL  TorsoCasing.STL  TorsoCasingMetresFrontCustom.STL  TorsoCasingMetresFrontFine.STL  TorsoCasing_noDome.STL  leg.STL
SLIDER/src/slider_gazebo/urdf/: SLIDER_ROTOGAIT_FOOT_pin.urdf  SLIDER_ROTOGAIT_FOOT_pin_original.urdf  slider.urdf
SLIDER/src/slider_gazebo/worlds/: SLIDER.world
plot/: C++comp.py  CoMt.txt  CoMt1.txt  CoMt111.txt  CoMtla.txt  CoMtlala.txt  CoMtlalala.txt  CoMx.txt  CoMx1.txt  CoMx111.txt  CoMxla.txt  CoMxlala.txt  CoMxlalala.txt  CoMy.txt  CoMy1.txt  CoMyla.txt  CoMylala.txt  CoMylalala.txt  ZMPx.txt  ZMPx1.txt  ZMPxla.txt  ZMPxlala.txt  ZMPxlalala.txt  ZMPy.txt  ZMPy1.txt  ZMPyla.txt  ZMPylala.txt  ZMPylalala.txt  as  forward_velocity.txt  lateral_velocity.txt  plot_ZMP.py  plot_com.py  plot_disturb.py  plot_random.py  plot_score.py  plot_time.py  plot_velocity.py  ran2forward_velocity.txt  ran2lateral_velocity.txt  (+45 more)
